# ntut-coding-concepts

./: .clang-format  .gitignore  CMakeLists.txt  README.md
exception/: CMakeLists.txt
exception/p01-without-exception/: CMakeLists.txt  main.cpp
exception/p02-use-exception/: main.cpp
exception/p02-use-optional/: CMakeLists.txt  main.cpp
exception/p03-custom-exception/: CMakeLists.txt  main.cpp
exception/p03-use-exception/: CMakeLists.txt
exception/p04-custom-exception/: CMakeLists.txt  Exceptions.h
exception/p04-use-optional/: CMakeLists.txt  main.cpp
exception/p05-use-expected/: CMakeLists.txt  main.cpp
histeq-example/: CMakeLists.txt  main.cpp
histeq-example/histeq/: CMakeLists.txt
histeq-example/histeq/include/: histeq.h
histeq-example/histeq/src/: histeq.cpp
smart-pointer/: CMakeLists.txt
smart-pointer/p01-raw-pointer/: CMakeLists.txt  main.cpp
smart-pointer/p02-shared-ptr/: CMakeLists.txt  main.cpp
virtual-class/: CMakeLists.txt
virtual-class/avc/: CMakeLists.txt
virtual-class/avc/src/: AVCEncoder.cpp
virtual-class/hevc/include/hevc/: HEVCEncoder.h
virtual-class/p01-without-virtual-class/: CMakeLists.txt  main.cpp
virtual-class/p01-without-virtual-class/include/: CoderType.h  Encoders.h
virtual-class/p01-without-virtual-class/src/: Encoders.cpp
virtual-class/p01-without-virtual-class/vc/avc/include/avc/: AVCEncoder.h
virtual-class/p01-without-virtual-class/vc/hevc/: CMakeLists.txt
virtual-class/p02-use-virtual-class/: CMakeLists.txt  main.cpp
virtual-class/p02-use-virtual-class/include/: Encoders.h  VirtualEncoder.h
virtual-class/p02-use-virtual-class/include/parser/: AVCEncoderParser.h  HEVCEncoderParser.h  VVCEncoderParser.h
virtual-class/p02-use-virtual-class/src/: CoderType.cpp  Encoders.cpp  VirtualEncoder.cpp
virtual-class/p02-use-virtual-class/src/parser/: AVCEncoderParser.cpp  HEVCEncoderParser.cpp  VVCEncoderParser.cpp
virtual-class/p03-ambiguous-name/: CMakeLists.txt  main.cpp
virtual-class/p03-ambiguous-name/include/: CoderType.h  Encoders.h
virtual-class/p03-ambiguous-name/parser/avc-parser/: CMakeLists.txt
virtual-class/p03-ambiguous-name/parser/avc-parser/include/: AVCEncoderParser.h
virtual-class/p03-ambiguous-name/parser/avc-parser/src/: AVCEncoderParser.cpp
virtual-class/p03-ambiguous-name/parser/hevc-parser/: CMakeLists.txt
virtual-class/p03-ambiguous-name/parser/hevc-parser/include/: HEVCEncoderParser.h
virtual-class/p03-ambiguous-name/parser/hevc-parser/src/: HEVCEncoderParser.cpp
virtual-class/p03-ambiguous-name/parser/virtual-encoder/: CMakeLists.txt
virtual-class/p03-ambiguous-name/parser/virtual-encoder/include/: VirtualEncoder.h
virtual-class/p03-ambiguous-name/parser/virtual-encoder/src/: VirtualEncoder.cpp
virtual-class/p03-ambiguous-name/parser/vvc-parser/: CMakeLists.txt
virtual-class/p03-ambiguous-name/parser/vvc-parser/include/: VVCEncoderParser.h
virtual-class/p03-ambiguous-name/parser/vvc-parser/src/: VVCEncoderParser.cpp
virtual-class/p03-ambiguous-name/src/: CoderType.cpp  Encoders.cpp
virtual-class/vc/avc/: CMakeLists.txt
virtual-class/vc/avc/include/vc/: Encoder.h
virtual-class/vc/avc/src/: Encoder.cpp
virtual-class/vc/hevc/: CMakeLists.txt
virtual-class/vc/hevc/include/vc/: Encoder.h
virtual-class/vc/hevc/src/: Encoder.cpp  HEVCEncoder.cpp
virtual-class/vc/vvc/: CMakeLists.txt
virtual-class/vc/vvc/include/vc/: Encoder.h
virtual-class/vc/vvc/src/: Encoder.cpp  VVCEncoder.cpp
virtual-class/vvc/include/vvc/: VVCEncoder.h
